Fixed: Conent div going outside screen size. Fixed: No spacing between page titles. Fixed Side menu names being visable when collapsed.

--- a/main/static/assets/css/styles.scss
+++ b/main/static/assets/css/styles.scss
@@ -64,7 +64,6 @@ body {
 /* main content div for all pages */
 
 .content{
-    height: 100vh;
     overflow-y: visible;
     background-color: var(--color-primary);
     transition: all .23s ease-in-out;
